{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 103,
  "lineage": "3a89c790-269a-c709-c285-05ac41329ad1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "team05-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-038b7c081bf8a5c2f",
            "arn": "arn:aws:ec2:ap-northeast-2:495264909330:elastic-ip/eipalloc-038b7c081bf8a5c2f",
            "association_id": "eipassoc-05894c9b82b9fa859",
            "domain": "vpc",
            "id": "eipalloc-038b7c081bf8a5c2f",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-07bed232dbcc3fc61",
            "private_dns": "ip-10-0-1-215.ap-northeast-2.compute.internal",
            "private_ip": "10.0.1.215",
            "public_dns": "ec2-13-209-173-21.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "13.209.173.21",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "team05-eip"
            },
            "tags_all": {
              "Name": "team05-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "team05-db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f605570d05d73472",
            "arn": "arn:aws:ec2:ap-northeast-2:495264909330:instance/i-0d8e596e3c840d19b",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "team05-instance-profile",
            "id": "i-0d8e596e3c840d19b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ff1014f725b090b6",
            "private_dns": "ip-10-0-1-126.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.126",
            "public_dns": "ec2-15-165-74-176.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "15.165.74.176",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-055cd27b981c96728",
                "volume_size": 24,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05372422fc67fc069",
            "tags": {
              "Name": "team05-db"
            },
            "tags_all": {
              "Name": "team05-db"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c637a298100bb6ad"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.team05-instance-profile",
            "aws_iam_role.team05-ec2-role",
            "aws_security_group.team05-sg",
            "aws_subnet.team05-subnet_app",
            "aws_vpc.team05-vpc",
            "data.aws_ami.latest_amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "team05-main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f605570d05d73472",
            "arn": "arn:aws:ec2:ap-northeast-2:495264909330:instance/i-0dc6313dac0ec21e9",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "team05-instance-profile",
            "id": "i-0dc6313dac0ec21e9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d9748c192470b50e",
            "private_dns": "ip-10-0-1-210.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.210",
            "public_dns": "ec2-3-35-65-112.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.35.65.112",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-06d17b14c3e47e9fc",
                "volume_size": 12,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05372422fc67fc069",
            "tags": {
              "Name": "team05-main"
            },
            "tags_all": {
              "Name": "team05-main"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c637a298100bb6ad"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.team05-instance-profile",
            "aws_iam_role.team05-ec2-role",
            "aws_security_group.team05-sg",
            "aws_subnet.team05-subnet_app",
            "aws_vpc.team05-vpc",
            "data.aws_ami.latest_amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "team05-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:495264909330:internet-gateway/igw-0a4fe4a3b0b5d517f",
            "id": "igw-0a4fe4a3b0b5d517f",
            "owner_id": "495264909330",
            "tags": {
              "Name": "team05-igw"
            },
            "tags_all": {
              "Name": "team05-igw"
            },
            "vpc_id": "vpc-06edf03855d6dc1de"
          },
          "dependencies": [
            "aws_vpc.team05-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "team05-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-038b7c081bf8a5c2f",
            "association_id": "eipassoc-05894c9b82b9fa859",
            "connectivity_type": "public",
            "id": "nat-073812b4aa6beed10",
            "network_interface_id": "eni-07bed232dbcc3fc61",
            "private_ip": "10.0.1.215",
            "public_ip": "13.209.173.21",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-05372422fc67fc069",
            "tags": {
              "Name": "team05-nat"
            },
            "tags_all": {
              "Name": "team05-nat"
            }
          },
          "dependencies": [
            "aws_eip.team05-eip",
            "aws_subnet.team05-subnet_app",
            "aws_vpc.team05-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "team05-private-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:495264909330:route-table/rtb-0e8badb95e58555b0",
            "id": "rtb-0e8badb95e58555b0",
            "owner_id": "495264909330",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-073812b4aa6beed10",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "team05-private-rt"
            },
            "tags_all": {
              "Name": "team05-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-06edf03855d6dc1de"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.team05-eip",
            "aws_nat_gateway.team05-nat",
            "aws_subnet.team05-subnet_app",
            "aws_vpc.team05-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "team05-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:495264909330:route-table/rtb-08c8d410b7d41927b",
            "id": "rtb-08c8d410b7d41927b",
            "owner_id": "495264909330",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a4fe4a3b0b5d517f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "team05-rt"
            },
            "tags_all": {
              "Name": "team05-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-06edf03855d6dc1de"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.team05-igw",
            "aws_vpc.team05-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "team05-app-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f5e248f6f01aabea",
            "route_table_id": "rtb-08c8d410b7d41927b",
            "subnet_id": "subnet-05372422fc67fc069"
          },
          "dependencies": [
            "aws_internet_gateway.team05-igw",
            "aws_route_table.team05-rt",
            "aws_subnet.team05-subnet_app",
            "aws_vpc.team05-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "team05-db-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-058f6de9f1252a2f9",
            "route_table_id": "rtb-0e8badb95e58555b0",
            "subnet_id": "subnet-06044fa16ab918884"
          },
          "dependencies": [
            "aws_eip.team05-eip",
            "aws_nat_gateway.team05-nat",
            "aws_route_table.team05-private-rt",
            "aws_subnet.team05-subnet_app",
            "aws_subnet.team05-subnet_db",
            "aws_vpc.team05-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "team05-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:495264909330:security-group/sg-0c637a298100bb6ad",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c637a298100bb6ad",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "team05-sg",
            "name_prefix": "",
            "owner_id": "495264909330",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "team05-sg"
            },
            "tags_all": {
              "Name": "team05-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-06edf03855d6dc1de"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.team05-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "team05-subnet_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:495264909330:subnet/subnet-05372422fc67fc069",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05372422fc67fc069",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "495264909330",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "team05-subnet-1"
            },
            "tags_all": {
              "Name": "team05-subnet-1"
            },
            "vpc_id": "vpc-06edf03855d6dc1de"
          },
          "dependencies": [
            "aws_vpc.team05-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "team05-subnet_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:495264909330:subnet/subnet-06044fa16ab918884",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06044fa16ab918884",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "495264909330",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "team05-subnet-2"
            },
            "tags_all": {
              "Name": "team05-subnet-2"
            },
            "vpc_id": "vpc-06edf03855d6dc1de"
          },
          "dependencies": [
            "aws_vpc.team05-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "team05-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:495264909330:vpc/vpc-06edf03855d6dc1de",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02e4f931eed19437c",
            "default_route_table_id": "rtb-068d1fadefdb37f2f",
            "default_security_group_id": "sg-00cd1c557a73104fa",
            "dhcp_options_id": "dopt-0c61291a1cbafdce1",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06edf03855d6dc1de",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-068d1fadefdb37f2f",
            "owner_id": "495264909330",
            "tags": {
              "Name": "team05-vpc"
            },
            "tags_all": {
              "Name": "team05-vpc"
            }
          }
        }
      ]
    }
  ]
}